--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@vercel/analytics": "^1.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-helmet-async": "^2.0.5",
+    "react-is": "^19.1.0",
     "recharts": "^3.1.0"
   },
   "devDependencies": {
