--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.1.0",
     "react-helmet-async": "^2.0.5",
     "react-is": "^19.1.0",
+    "react-router-dom": "^7.7.0",
     "recharts": "^3.1.0"
   },
   "devDependencies": {
