--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:vercel": "vercel dev",
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest",
@@ -12,8 +13,14 @@
     "test:run": "vitest run"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^0.9.4",
+    "@sparticuz/chromium": "^138.0.1",
     "@vercel/analytics": "^1.5.0",
     "html-to-image": "^1.11.13",
+    "html-to-react": "^1.7.0",
+    "html2canvas": "^1.4.1",
+    "nanoid": "^5.1.5",
+    "pg": "^8.16.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-helmet-async": "^2.0.5",
@@ -29,8 +36,12 @@
     "@types/node": "^22.14.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@vercel/node": "^5.3.6",
     "@vitejs/plugin-react": "^4.6.0",
+    "dotenv": "^16.4.5",
     "jsdom": "^26.1.0",
+    "puppeteer": "^10.1.0",
+    "puppeteer-core": "^10.4.0",
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
     "vitest": "^3.2.4"
