--- a/package.json
+++ b/package.json
@@ -14,11 +14,9 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.9.4",
-    "@sparticuz/chromium": "^138.0.1",
+    "@types/react-share": "^3.0.3",
     "@vercel/analytics": "^1.5.0",
     "html-to-image": "^1.11.13",
-    "html-to-react": "^1.7.0",
-    "html2canvas": "^1.4.1",
     "nanoid": "^5.1.5",
     "pg": "^8.16.3",
     "react": "^19.1.0",
@@ -26,6 +24,7 @@
     "react-helmet-async": "^2.0.5",
     "react-is": "^19.1.0",
     "react-router-dom": "^7.7.0",
+    "react-share": "^5.2.2",
     "recharts": "^3.1.0"
   },
   "devDependencies": {
@@ -38,10 +37,11 @@
     "@types/react-dom": "^19.1.6",
     "@vercel/node": "^5.3.6",
     "@vitejs/plugin-react": "^4.6.0",
-    "dotenv": "^16.4.5",
+    "autoprefixer": "^10.4.21",
+    "dotenv": "^17.2.0",
     "jsdom": "^26.1.0",
-    "puppeteer": "^10.1.0",
-    "puppeteer-core": "^10.4.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
     "vitest": "^3.2.4"
