--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "test:run": "vitest run"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
     "@neondatabase/serverless": "^0.9.4",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
     "@types/react-share": "^3.0.3",
     "@vercel/analytics": "^1.5.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "html-to-image": "^1.11.13",
     "nanoid": "^5.1.5",
     "pg": "^8.16.3",
@@ -25,7 +30,8 @@
     "react-is": "^19.1.0",
     "react-router-dom": "^7.7.0",
     "react-share": "^5.2.2",
-    "recharts": "^3.1.0"
+    "recharts": "^3.1.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
@@ -42,8 +48,10 @@
     "jsdom": "^26.1.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
   }
 }
