--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,11 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./*"]
+    }
   },
-    "include": ["src", "components", "types.ts", "utils", "hooks", "config", "api"]
+  "include": ["components", "types.ts", "utils", "hooks", "config", "api", "App.tsx"]
 }
